Do not port map, openvpn, dns, and other via docker, use traefik instead

--- a/03_recreate_all_containers.yml
+++ b/03_recreate_all_containers.yml
@@ -31,4 +31,5 @@
         chdir: "{{ item }}"
       with_items:
         - "{{ root_dirs.discord }}"
+        - "{{ root_dirs.matrix_server }}"
       when: not is_dev
