--- a/roles/home_automation/templates/zigbee2mqtt_configuration.yaml
+++ b/roles/home_automation/templates/zigbee2mqtt_configuration.yaml
@@ -12,7 +12,7 @@ mqtt:
   # MQTT base topic for zigbee2mqtt MQTT messages
   base_topic: zigbee2mqtt
   # MQTT server URL
-  server: 'mqtt://{{ mosquitto.ipv4 }}'
+  server: 'mqtt://mosquitto'
   # MQTT server authentication, uncomment if required:
   # user: my_user
   # password: my_password
