Comment out among us, since its using too much ram

--- a/roles/proxy/templates/docker-compose.yml
+++ b/roles/proxy/templates/docker-compose.yml
@@ -33,7 +33,7 @@ services:
       - "--entrypoints.web.address=:80"
       - "--entrypoints.websecure.address=:443"
       - "--entrypoints.matrix_alt.address=:8448"
-      - "--entryPoints.among_us.address=:22023/udp"
+{#    - "--entryPoints.among_us.address=:22023/udp" #}
 {#    - "--entryPoints.openvpn_tcp.address=:1194" #}
       - "--entryPoints.openvpn_udp.address=:1194/udp"
       - "--entryPoints.dns_tcp.address=:53"
@@ -65,11 +65,13 @@ services:
       - "--certificatesresolvers.{{ traefik.lets_encrypt.resolver_name }}.acme.dnschallenge.delaybeforecheck=0"
 #}
 {% endif %}
+{#
+        (22023,'udp'),
+#}
     {{ dn.map_ports([
         (80,), (443,),
         (8080,),
         (8448,),
-        (22023,'udp'),
         (1194,'udp'),
         (53,'tcp'), (53,'udp') ])|indent(width = 4) }}
     {{ dv.volumes_section_complete(vols_traefik)|indent(width = 4) }}
