--- a/03_run_dogger.yml
+++ b/03_run_dogger.yml
@@ -1,18 +1,25 @@
+#
+# IN
+#     command: string
+#
+# Examples:
+#
+# --extra-vars command='"docker-compose stop && docker-compose rm -f"'
+# --extra-vars command='"docker-compose stop && docker-compose rm -f && docker-compose up -d --remove-orphans"'
+#
+
 - hosts: all
   gather_facts: yes
   remote_user: root
   debugger: on_failed
-
-  vars:
-    restart_command: "docker-compose stop && docker-compose rm -f && docker-compose up -d --remove-orphans"
 
   pre_tasks:
     - include: tasks/collect_system_data.yml
       tags: always
 
   tasks:
-    - name: Recreate containers
-      shell: "{{ restart_command }}"
+    - name: Running command
+      shell: "{{ command }}"
       args:
         chdir: "{{ item }}"
       with_items:
@@ -25,8 +32,8 @@
         - "{{ root_dirs.jupyter }}"
         - "{{ root_dirs.personal_website }}"
 
-    - name: Recreate containers
-      shell: "{{ restart_command }}"
+    - name: Running command
+      shell: "{{ command }}"
       args:
         chdir: "{{ item }}"
       with_items:
