--- a/roles/matrix_server/templates/homeserver.yaml.EXAMPLE
+++ b/roles/matrix_server/templates/homeserver.yaml.EXAMPLE
@@ -993,11 +993,15 @@ url_preview_accept_language:
 
 # The public URIs of the TURN server to give to clients
 #
-#turn_uris: []
+turn_uris:
+  - "turns:|| dns.public.root ||:5349?transport=udp"
+  # - "turns:|| dns.public.root ||:5349?transport=tcp"
+  - "turn:|| dns.public.root ||:3478?transport=udp"
+  # - "turn:|| dns.public.root ||:3478?transport=tcp"
 
 # The shared secret used to compute passwords for the TURN server
 #
-#turn_shared_secret: "YOUR_SHARED_SECRET"
+turn_shared_secret: "|| gen.pw_letters_alt('turnserver', 64) ||"
 
 # The Username and password if the TURN server needs them and
 # does not use a token
@@ -1007,7 +1011,7 @@ url_preview_accept_language:
 
 # How long generated TURN credentials last
 #
-#turn_user_lifetime: 1h
+turn_user_lifetime: 86400000
 
 # Whether guests should be allowed to use the TURN server.
 # This defaults to True, otherwise VoIP will be unreliable for guests.
@@ -1015,7 +1019,7 @@ url_preview_accept_language:
 # connect to arbitrary endpoints without having first signed up for a
 # valid account (e.g. by passing a CAPTCHA).
 #
-#turn_allow_guests: true
+turn_allow_guests: false
 
 
 ## Registration ##
