--- a/roles/proxy/tasks/tls/self_signed.yml
+++ b/roles/proxy/tasks/tls/self_signed.yml
@@ -6,19 +6,8 @@
     packages:
       - openssl
 
-- name: Generate a Self Signed OpenSSL certificate
-  block:
-    - openssl_privatekey:
-        path: "{{ tls.self_signed.private_key_dir }}"
-        type: RSA
-        size: 8192
-
-    - openssl_csr:
-        path: "{{ tls.self_signed.cert_request_dir }}"
-        privatekey_path: "{{ tls.self_signed.private_key_dir }}"
-
-    - openssl_certificate:
-        path: "{{ tls.self_signed.cert_dir }}"
-        privatekey_path: "{{ tls.self_signed.private_key_dir }}"
-        csr_path: "{{ tls.self_signed.cert_request_dir }}"
-        provider: selfsigned
+- include_tasks: create_self_signed_cert.yml
+  vars:
+    privatekey_path: "{{ tls.self_signed.private_key_dir }}"
+    csr_path: "{{ tls.self_signed.cert_request_dir }}"
+    pem_path: "{{ tls.self_signed.cert_dir }}"
