--- a/roles/matrix_server/templates/docker-compose.yml
+++ b/roles/matrix_server/templates/docker-compose.yml
@@ -7,6 +7,7 @@
 {% set vols_matrix_server = [ matrix_server.volumes.data ] %}
 {% set vols_db = [ matrix_server_db.volumes.data ] %}
 {% set service_name = 'matrix_synapse' %}
+{% set nginx_name = 'matrix_well_known' %}
 
 version: "3"
 services:
@@ -34,9 +35,10 @@ services:
     environment:
       UID: '{{ matrix_server.user }}'
       GID: '{{ matrix_server.user }}'
+{#      [ 'websecure', 'matrix_alt' ] #}
     {{ traefik.declare_labels_mount_path(dns.public.root, service_name, "/_matrix/", 8008,
         traefik.minimal_middlewares_no_auth,
-        [ 'websecure', 'matrix_alt' ]
+        [ 'websecure' ]
       )|indent(width = 4) }}
       {{ traefik.use_letsencrypt(service_name) }}
     {{ dv.volumes_section_complete(vols_matrix_server)|indent(width = 4) }}
@@ -56,6 +58,23 @@ services:
       - {{ root_dirs.matrix_server }}/turnserver.conf:/etc/coturn/turnserver.conf
       - {{ global_cert_dir }}/realmar.net.crt:/opt/certificates/realmar.net.crt
       - {{ global_cert_dir }}/realmar.net.pem:/opt/certificates/realmar.net.pem
+    {{ dm.common()|indent(width = 4) }}
+
+  well_known:
+    image: nginx:latest
+    {{ traefik.declare_labels_mount_path(dns.public.root, nginx_name, "/.well-known/matrix/server", 80,
+        [
+          {
+            "mw": traefik.replace_path,
+            "args": { "path": "/well-known_server.json" }
+          }
+        ],
+        [ 'websecure' ]
+      )|indent(width = 4) }}
+      {{ traefik.use_letsencrypt(nginx_name) }}
+    volumes:
+      - {{ root_dirs.matrix_server }}/well-known_server.json:/usr/share/nginx/html/well-known_server.json:ro
+    {{ dn.discovery_network_section()|indent(width = 4) }}
     {{ dm.common()|indent(width = 4) }}
 
 {{ dn.networks_declaration([ discovery_network ]) }}
