--- a/99_debug.yml
+++ b/99_debug.yml
@@ -1,46 +1,52 @@
 - hosts: all
   gather_facts: yes
-  remote_user: root
-  debugger: on_failed
-
-  pre_tasks:
+  tasks:
     - include: tasks/collect_system_data.yml
       tags: always
 
+- hosts: docker-swarm-manager[0]
+  debugger: on_failed
   tasks:
-    #- name: Check if is rasbian
-    #  stat:
-    #    path: /usr/bin/raspi-config
-    #  register: raspi_config_check
-#
-    #- set_fact:
-    #    is_rasbian: "{{ raspi_config_check.stat.exists }}"
-#
-    #- set_fact:
-    #    arch: amd64
-    #  when: is_rasbian|bool == false
-#
-    #- set_fact:
-    #    arch: armhf
-    #  when: is_rasbian|bool
-#
-    #- name: Get RPI CPU Revision
-    #  shell: "cat /proc/cpuinfo | grep Revision | cut -d ' ' -f2"
-    #  register: cpu_revision
-    #  # no need to report anything
-    #  changed_when: False
-
     - debug:
         msg:
-          #- "{{ flat_volumes }}"
-          #- "{{ cpu_revision }}"
-          #- "{{ arch }}"
-          #- "{{ raspi_config_check }}"
-          #- "exists {{ raspi_config_check.stat.exists }}"
-          #- "is_rasbian|bool {{ is_rasbian|bool }}"
-          #- "is_rasbian {{ is_rasbian }}"
-          #- "{{ ansible_distribution }}"
-          #- "{{ ansible_distribution_major_version }}"
-          #- "{{ ansible_distribution_version }}"
-          #- "{{ lookup('template', 'standard_pw_gen.jinja2', template_vars=dict(name='dingdong')) }}"
+          - "{{ ansible_host }}"
+          - "{{ inventory_hostname }}"
+          - "{{ group_names }}"
+
+          - "{{ is_rpi }}"
+          - "{{ arch_short }}"
+          - "{{ is_ubuntu }}"
+          - "{{ is_debian }}"
+          - "{{ is_dev }}"
+
+- hosts: docker-swarm-manager:!docker-swarm-manager[0]
+  debugger: on_failed
+
+  tasks:
+    - debug:
+        msg:
+          - "{{ ansible_host }}"
+          - "{{ inventory_hostname }}"
+          - "{{ group_names }}"
+
+          - "{{ is_rpi }}"
+          - "{{ arch_short }}"
+          - "{{ is_ubuntu }}"
+          - "{{ is_debian }}"
+          - "{{ is_dev }}"
+
+- hosts: docker-swarm-workers
+  debugger: on_failed
+
+  tasks:
+    - debug:
+        msg:
+          - "{{ ansible_host }}"
+          - "{{ inventory_hostname }}"
+          - "{{ group_names }}"
+
+          - "{{ is_rpi }}"
+          - "{{ arch_short }}"
+          - "{{ is_ubuntu }}"
+          - "{{ is_debian }}"
           - "{{ is_dev }}"
