--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,11 +1,20 @@
 [defaults]
 nocows=1
 
+
+library = 3d/ceph-ansible/library
+action_plugins = 3d/ceph-ansible/plugins/actions
+callback_plugins = 3d/ceph-ansible/plugins/callback
+filter_plugins = 3d/ceph-ansible/plugins/filter
+
+enable_task_debugger = True
+
 deprecation_warnings = True
 display_skipped_hosts = True
 error_on_undefined_vars = True
 log_path = ansible.log
 
+forks = 20
 gathering = smart
 scp_if_ssh = True
 
@@ -17,6 +26,7 @@ ssh_args=-o ForwardAgent=yes
 # https://www.toptechskills.com/ansible-tutorials-courses/speed-up-ansible-playbooks-pipelining-mitogen/
 # https://docs.ansible.com/ansible/latest/reference_appendices/config.html#ansible-pipelining
 pipelining = True
+retries = 10
 
 [inventory]
 enable_plugins = ini
