--- a/inventory_dev.ini
+++ b/inventory_dev.ini
@@ -1,5 +1,47 @@
 [all]
-pihole-dev ansible_host=192.168.250.102 ansible_ssh_user=root
+dev-node-01 ansible_host=192.168.250.101 ansible_ssh_user=root
+dev-node-02 ansible_host=192.168.250.102 ansible_ssh_user=root
+dev-node-03 ansible_host=192.168.250.103 ansible_ssh_user=root
+dev-node-04 ansible_host=192.168.250.104 ansible_ssh_user=root
+dev-node-05 ansible_host=192.168.250.105 ansible_ssh_user=root
+dev-node-06 ansible_host=192.168.250.106 ansible_ssh_user=root
 
-[development]
-pihole-dev
+[nice_all]
+dev-node-01
+dev-node-02
+dev-node-03
+dev-node-04
+dev-node-05
+dev-node-06
+
+[nice_all:vars]
+ansible_python_interpreter=/usr/bin/python3
+
+[ceph_all:children]
+nice_all
+
+[docker-swarm-manager]
+dev-node-01
+dev-node-02
+dev-node-03
+
+[docker-swarm-workers]
+dev-node-04
+dev-node-05
+dev-node-06
+
+[development:children]
+docker-swarm-manager
+docker-swarm-workers
+
+[mons:children]
+nice_all
+
+[osds:children]
+nice_all
+
+[mdss:children]
+nice_all
+
+[monitoring:children]
+nice_all
