--- a/group_vars/production.yml
+++ b/group_vars/production.yml
@@ -1,7 +1,7 @@
 host:
   name: "{{ inventory_hostname }}"
   public_interface: eth0
-  ipv4: 192.168.1.128
+  ipv4: "{{ ansible_host }}"
   ipv6: 2a02:120b:2c06:57d0::abcf
   # my swisscom router supports SLAAC only, meaning that if you turn on IPv6
   # you are forced to use SLAAC, no other configurations are possible. There is
