--- a/roles/base_system/tasks/main.yml
+++ b/roles/base_system/tasks/main.yml
@@ -19,6 +19,16 @@
     update_password: on_create
   tags: pw
 
+# ceph-ansible deploys chrony
+# - block:
+#     - name: Enable NTP
+#       include_role:
+#         name: stuvusit.systemd-timesyncd
+#       vars:
+#         timesync_timezone: "{{ timezone }}"
+#         timesync_ntp_hosts: "{{ ntp_servers }}"
+#   tags: ntp
+
 - name: Install base packages
   apt:
     name: "{{ packages }}"
@@ -29,7 +39,6 @@
       - python3
       - python3-dev
       - python3-pip
-      - python-dev
       - bash-completion
       - git
       - htop
@@ -73,6 +82,8 @@
 
 #- include: promiscuous_mode.yml
 #  tags: network
+
+- include: sysctl.yml
 
 - meta: flush_handlers
 
