--- a/roles/base_system/vars/main.yml
+++ b/roles/base_system/vars/main.yml
@@ -1,3 +1,9 @@
 base_system:
   unattended_upgrades:
     mail: anastassios.martakos@outlook.com
+
+ntp_servers:
+  - 0.ch.pool.ntp.org
+  - 1.ch.pool.ntp.org
+  - 2.ch.pool.ntp.org
+  - 3.ch.pool.ntp.org
