--- a/roles/datastore/tasks/main.yml
+++ b/roles/datastore/tasks/main.yml
@@ -74,7 +74,7 @@
     pip:
       name: [ "influxdb", "requests" ]
       state: latest
-      executable: pip
+      executable: pip3
 
   - include_tasks: docker/start_stack.yml
     vars:
