--- a/tasks/docker/network/add_docker_network.yml
+++ b/tasks/docker/network/add_docker_network.yml
@@ -9,18 +9,20 @@
   register: result
 
 - name: Add v4-only docker network
-  docker_network:
+  community.general.docker_network:
     name: "{{ network.name }}"
-    driver: bridge
+    driver: overlay
+    scope: swarm
     ipam_config:
       - subnet: "{{ network.v4.subnet }}"
     state: present
   when: (network.v6 is not defined or network.v6.enable == false) and result.exists == false
 
 - name: Add v4 and v6 docker network
-  docker_network:
+  community.general.docker_network:
     name: "{{ network.name }}"
-    driver: bridge
+    driver: overlay
+    scope: swarm
     enable_ipv6: yes
     ipam_config:
       - subnet: "{{ network.v4.subnet }}"
