--- a/roles/jupyter/templates/docker-compose.yml
+++ b/roles/jupyter/templates/docker-compose.yml
@@ -9,7 +9,7 @@
 version: "3"
 services:
   jupyter:
-    build: .
+    image: {{ dm.private_image('jupyter') }}
     command:
       - "--ip=0.0.0.0"
       - "--port=8888"
