Migrate proxy and personal website to docker swarm

--- a/roles/personal_website/tasks/main.yml
+++ b/roles/personal_website/tasks/main.yml
@@ -3,7 +3,9 @@
       vars:
         usr: "{{ user }}"
         root_dir: "{{ root_dirs.personal_website }}"
-  tags: compose_file
+  tags:
+    - compose_file
+    - personal_website_compose_file
 
 - name: Copy Dockerfile
   template:
